<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp">

    <EditText
        android:id="@+id/titleEditText"
        android:layout_width="match_parent"
        android:layout_height="77dp"
        android:hint="Title" />

    <EditText
        android:id="@+id/descriptionEditText"
        android:layout_width="match_parent"
        android:layout_height="75dp"
        android:hint="Description" />

    <EditText
        android:id="@+id/dateEditText"
        android:layout_width="match_parent"
        android:layout_height="69dp"
        android:hint="Date (YYYY-MM-DD)"
        android:inputType="date" />

    <EditText
        android:id="@+id/categoryEditText"
        android:layout_width="match_parent"
        android:layout_height="69dp"
        android:hint="Category" />

    <EditText
        android:id="@+id/amountEditText"
        android:layout_width="match_parent"
        android:layout_height="76dp"
        android:hint="Amount"
        android:inputType="numberDecimal" />

    <Button
        android:id="@+id/saveButton"
        android:layout_width="match_parent"
        android:layout_height="88dp"
        android:text="Save" />
</LinearLayout>
