<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerView"
        android:layout_width="match_parent"
        android:layout_height="643dp"
        android:layout_above="@id/addButton"
        android:layout_marginBottom="123dp" />

    <LinearLayout
        android:id="@+id/sortLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@id/addButton"
        android:orientation="horizontal"
        android:padding="16dp">

        <Spinner
            android:id="@+id/categorySpinner"
            android:layout_width="0dp"
            android:layout_height="56dp"
            android:layout_weight="1" />

        <Button
            android:id="@+id/sortButton"
            android:layout_width="wrap_content"
            android:layout_height="59dp"
            android:layout_marginStart="8dp"
            android:text="Sort" />
    </LinearLayout>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/addButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_margin="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="22dp"
        android:layout_marginBottom="4dp"
        android:src="@android:drawable/ic_input_add" />
</RelativeLayout>
